# ST_HD_Emulator

./: .gitignore  CMakeLists.txt  README.md  emu.c  emu.h  emucheckcards.c  emucmd.h  emuerror.h  emufileio.h  emuinit.c  emuinit.h  emurtc.c  emurtc.h  emuscsi.c  emuscsi.h  emusdcard.c  fileIO.c  junk.c  mountFS.c  mountRAW.c  tmp.txt  try.c  try.pio
hardware/: Atari_ST_HDD_EMULATOR.sch
sdcard/: hw_config.h  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  spi.c  spi.h
shell/: cpdisk.c  cpuclock.c  datetime.c  debug.c  emumount.c  emushell.c  emushell.h  sdtest.c  status.c  uptime.c
